# pyswashes

./: .coveragerc  .gitignore  MANIFEST.in  README.md  README.rst  appveyor.yml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
ci-tools/: package-upload.py
conda.recipe/: meta.yaml
docs/: api.rst  conf.py  index.rst
pyswashes/: pyswashes.py
src/pyswashes/: __init__.py  pyswashes.py
tests/: test_funcs.py  test_params.py
