[metadata]
name = pyswashes
version = 0.2.0
description = "A Python interface for SWASHES."
author = Laurent Courty
author_email = laurent@courty.me
long_description = file: README.rst
keywords = science, engineering, hydraulics
license = GPLv3
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering

[options]
install_requires = pandas
include_package_data = True
packages = find:
package_dir = '' = 'src'

[options.packages.find]
where = src
