[metadata]
name = pyswashes
version = 0.2.1
description = "Analytic solutions to the shallow water equations."
url = "https://pyswashes.readthedocs.io"
author = Laurent Courty
author_email = laurent@courty.me
long_description = file: README.rst
keywords = science, engineering, hydraulics
license = GPLv3
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
install_requires =
    numpy
    pandas
include_package_data = True
